--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -64,4 +64,4 @@ html(lang="en" class="h-full")
 
     // Footer
     footer(class="mx-auto max-w-6xl px-4 py-8 text-center text-xs text-slate-500")
-      | © #{new Date().getFullYear()} Your Store
+      | © #{new Date().getFullYear()}
